--- a/src/app/Styles/globals.css
+++ b/src/app/Styles/globals.css
@@ -10,6 +10,14 @@ body{
   font-family: "Inter", sans-serif;
 
 }
+:root {
+  --font-indie-flower: 'Indie Flower', cursive;
+}
+
+.handFont {
+  font-family: var(--font-indie-flower);
+}
+
 
 body {
   --sb-track-color: #040615;
